<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".AccountInfo">
    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/accountToolbar"
                layout="@layout/toolbar"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/accountInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountInfo"
            android:fontFamily="@font/inter_bold"
            android:textSize="31sp"
            android:textColor="#212121"
            android:layout_marginStart="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountInfo"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/firstNameHint"
                    android:background="@drawable/custom_edittext"
                    android:paddingHorizontal="10dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/lastNameHint"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_edittext"
                    android:paddingHorizontal="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_edittext"
                    android:paddingHorizontal="10dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:paddingVertical="20dp">
        <Button
            android:id="@+id/accountNextButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/primary_button"
            android:text="@string/next"
            android:fontFamily="@font/inter_bold"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>