<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".EditAccount">
    <RelativeLayout
        android:id="@+id/editAccountToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/editToolbar"
                layout="@layout/toolbar"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAccountToolbar"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:hint="@string/firstNameHint"
                    android:background="@drawable/custom_edittext"
                    android:paddingHorizontal="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/lastNameHint"
                    android:inputType="textPersonName"
                    android:background="@drawable/custom_edittext"
                    android:paddingHorizontal="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="18sp"
                    android:textColor="#212121"
                    android:layout_marginBottom="10dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/emailHint"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/custom_edittext"
                    android:paddingHorizontal="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobileText"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp"
                android:textColor="#212121"
                android:layout_marginBottom="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:weightSum="20"
                android:background="@drawable/custom_edittext"
                android:orientation="horizontal">
                <com.hbb20.CountryCodePicker
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/country_code_background"
                    android:gravity="center"
                    app:ccp_defaultNameCode="AU"
                    app:ccp_autoDetectCountry="true"
                    app:ccpDialog_showFlag="false"
                    app:ccpDialog_showCloseIcon="true"
                    app:ccp_showArrow="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textSize="18sp"
                    app:ccp_showFlag="false" />
                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_weight="15"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@drawable/custom_edittext"
                    android:inputType="phone"
                    android:textSize="18sp"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/mobileNumber"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:paddingVertical="20dp">
        <Button
            android:id="@+id/editSaveId"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/primary_button"
            android:text="@string/save"
            android:fontFamily="@font/inter_bold"
            android:textColor="#fff"
            android:textSize="16sp" />
    </RelativeLayout>
</RelativeLayout>