<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ForgotPassword">
    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/navbar"
                layout="@layout/toolbar"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPass"
            android:fontFamily="@font/inter_bold"
            android:textSize="31sp"
            android:textColor="#212121"
            android:layout_marginStart="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resetPassInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetPassword"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetPassInfo"
            android:fontFamily="@font/oxygen_regular"
            android:textSize="14sp"
            android:textColor="#212121"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/emailId"
        android:layout_below="@+id/resetPassInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp"
                android:textColor="#212121"
                android:layout_marginBottom="10dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:background="@drawable/custom_edittext"
                android:paddingHorizontal="10dp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailId"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:gravity="center">
            <Button
                android:id="@+id/sendMailButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/primary_button"
                android:text="@string/sendButton"
                android:fontFamily="@font/inter_bold"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:paddingVertical="20dp">
        <TextView
            android:id="@+id/resetForgot"
            android:clickable="true"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPass_text"
            android:fontFamily="@font/inter_bold"
            android:textColor="#1E90FF"
            android:textSize="16sp"
            android:focusable="true" />
    </RelativeLayout>
</RelativeLayout>